pushed by Shahriar  background done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pawfect</title>
+    <link rel="icon" type="image/png" href="./assets/TitleLogo.jpg" />
+    <link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
-    <h1>Project</h1>
+    <div class="wrapper">
+        <div class="indigo-background"></div>
+    
+        <h1>Background Done</h1>
+    </div>
 </body>
 </html>
