--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <body class="bg-white text-gray-800">
 
 
+
+
+
+
+
+
     <section class="mx-4 md:mx-20">
         <nav class="flex items-center justify-between pt-10 pb-5 relative">
           <!-- Left: Logo -->
@@ -56,6 +62,35 @@
           </div>
         </nav>
       </section>
+
+      <section>
+        <div class="center-container">
+          <p>Bringing Families Together</p>
+          <h1 class="boldtext">
+            <span>Your Path to Adoption</span>
+            <span>Starts Here</span>
+          </h1>
+        </div>
+        <p class="p-5 text2">
+          <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking</span>
+          <span>at its layout. The point of using Lorem Ipsum is that it has a.</span>
+        </p>
+        <div class="btn">
+          <a href="#scroller">
+            <button id="viewMoreBtn">View More</button>
+          </a>
+        </div>
+        <div class="m-4 p-8 md:p-16 flex justify-center items-center">
+          <img src="./assets/Puppy-and-Kitten-Sleeping-1000x500.jpg" alt="" class="w-full max-w-4xl"/>
+        </div>
+        <div class="flex items-center justify-center flex-col" id="adoptSection">
+          <h1 id="scroller" class="font-bold text-2xl">Adopt Your Best Friend</h1>
+          <h3 class="px-4 md:px-[450px] text-center py-8">
+            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a.
+          </h3>
+        </div>
+      </section>
+
 
   <script src="script.js" defer></script>
 </body>
