--- a/index.html
+++ b/index.html
@@ -104,6 +104,29 @@
   </section>
 
 
+
+<section>
+      <div class="pet-btns py-8 px-4 md:px-12">
+        <button class="pet-btnss flex gap-3" data-type="dog">
+          <img class="w-10 h-10 sm:w-5 h-5" src="./assets/shiba.png" alt="">
+          Dogs
+        </button>
+        <button class="pet-btnss flex gap-3" data-type="cat">
+          <img class="w-10 h-10 sm:w-5 h-5" src="./assets/cat.png" alt="">
+          Cats
+        </button>
+        <button class="pet-btnss flex gap-1 " data-type="rabbit">
+          <img class="w-10 h-10 sm:w-5 h-5 text-sm" src="./assets/rabbit.png" alt="">
+          Rabbits
+        </button>
+        <button class="pet-btnss flex gap-3" data-type="bird">
+          <img class="w-10 h-10 sm:w-5 h-5" src="./assets/parrot.png" alt="">
+          Birds
+        </button>
+      </div>
+    </section>
+
+
   <script>
     const menuToggle = document.getElementById('menuToggle');
     const mobileMenu = document.getElementById('mobileMenu');
