--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
   <header>
     <h1>Welcome to PawPromise</h1>
     <nav>
-      <a href="login.html">Login</a> |
-      <a href="dashboar.html">Sign Up</a>
+      <a href="/UserLogin/login.html">Login</a> |
+      <a href="UserLogin/signUp.html">Sign Up</a>
     </nav>
   </header>
 
   <main>
     <p>Your path to adoption starts here. Find your forever friend with PawPromise.</p>
 
-    <button onclick="location.href='/pages/dashboard.html'">Go to Login</button>
+    <button onclick="location.href='/pages/dashboard.html'">Go to Dashboard</button>
   </main>
 
   <footer>
