--- a/User/register.html
+++ b/User/register.html
@@ -29,9 +29,10 @@
       </div>
       <button type="submit" class="btn">Sign Up</button>
     </form>
-    <p>Already have an account? <a href="/index.html">Log In</a></p>
+    <p>Already have an account? <a href="login.html">Log In</a></p>
   </div>
 
-  <script src="/js/signUp.js"></script>
+  <!-- Firebase and Signup Script -->
+  <script type="module" src="/auth/register.js"></script>
 </body>
 </html>
