--- a/User/login.html
+++ b/User/login.html
@@ -4,48 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>User Login | PawPromise</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Chewy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/login.css" />
-  <script type="module" src="/auth/firebaseLogin.js"></script>
-  <script src="/js/login.js" defer></script>
+  <script type="module" src="/auth/login.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Chewy&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body style="margin:0; font-family:'Poppins', sans-serif; background:#f9f9f9; display:flex; justify-content:center; align-items:center; height:100vh;">
-
-  <div style="background:#fff; padding:30px; border-radius:15px; width:100%; max-width:380px; text-align:center; box-shadow:0 0 15px rgba(0,0,0,0.1);">
-    
-    <!-- Logo -->
-    <div style="margin-bottom:25px;">
-      <img src="https://cdn.vectorstock.com/i/2000v/11/62/simple-dog-logo-vector-50141162.avif" alt="PawPromise Logo" 
-           style="width:100px; height:100px; border-radius:50%; border:4px solid #d4e6f1; object-fit:cover; margin-bottom:10px;">
-      <h1 style="font-family:'Chewy', cursive; font-size:2.2rem; color:#6ab7e2; margin:0;">PawPromise</h1>
-      <p style="font-size:0.9rem; color:#555;">Find your forever friend</p>
+<body>
+  <div class="login-container">
+    <div class="logo">
+      <img src="https://cdn.vectorstock.com/i/2000v/11/62/simple-dog-logo-vector-50141162.avif" alt="PawPromise Logo">
+      <h1>PawPromise</h1>
+      <p>Find your forever friend</p>
     </div>
 
-    <!-- Login Form -->
-    <form id="loginForm" style="text-align:left;">
-      <label for="email" style="display:block; margin-bottom:5px; font-weight:600;">Email</label>
-      <input type="email" id="email" placeholder="Enter your email" required
-             style="width:100%; padding:10px; margin-bottom:5px; border:1.5px solid #ccc; border-radius:8px;">
-      <span id="emailError" style="display:none; color:red; font-size:0.8rem;">Invalid email</span>
-
-      <label for="password" style="display:block; margin-top:10px; margin-bottom:5px; font-weight:600;">Password</label>
-      <div style="position:relative;">
-        <input type="password" id="password" placeholder="Enter your password" required
-               style="width:100%; padding:10px; margin-bottom:15px; border:1.5px solid #ccc; border-radius:8px;">
-        <i id="togglePassword" class="fas fa-eye-slash" 
-           style="position:absolute; right:10px; top:50%; transform:translateY(-50%); cursor:pointer;"></i>
+    <form id="loginForm">
+      <div class="input-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="Enter your email" required>
+        <span id="emailError">Invalid email</span>
       </div>
 
-      <button type="submit"
-              style="width:100%; padding:12px; background:#6ab7e2; border:none; color:#fff; font-weight:600; border-radius:8px; cursor:pointer;">
-        Log In
-      </button>
+      <div class="input-group password-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter your password" required>
+        <i id="togglePassword" class="fas fa-eye-slash"></i>
+      </div>
+
+      <button type="submit" class="btn">Log In</button>
+      <a href="#" class="forgot">Forgot Password?</a>
     </form>
 
-    <p style="margin-top:15px; font-size:0.9rem; text-align:center;">
-      Don't have an account? <a href="register.html" style="color:#6ab7e2; text-decoration:none; font-weight:600;">Sign Up</a>
-    </p>
+    <p class="signup-text">Don't have an account? <a href="register.html">Sign Up</a></p>
   </div>
-
 </body>
 </html>
