--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body style="background-color: honeydew;">
   <section class="mx-4 md:mx-8 lg:mx-20">
     <nav class="flex items-center justify-between pt-6 md:pt-10 pb-5 relative">
       <div class="flex items-center space-x-4">
