--- a/User/register.html
+++ b/User/register.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/signUp.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
-<body>
+<body style="background-color: honeydew;">
   <div class="signup-container">
     <h2>Create an Account</h2>
     <form id="signup-form">
