Auth are all updated

--- a/User/login.html
+++ b/User/login.html
@@ -17,12 +17,8 @@
   <!-- Firebase Login JS -->
   <script type="module" src="/auth/firebaseLogin.js"></script>
 </head>
-<<<<<<< HEAD
 
-<body>
-=======
 <body style="background-color: honeydew;">
->>>>>>> ab3682eeea7c08ad443df35e6eb75259546b4171
   <div class="login-container">
     <div class="logo">
       <img src="https://cdn.vectorstock.com/i/2000v/11/62/simple-dog-logo-vector-50141162.avif" alt="PawPromise Logo">
@@ -44,7 +40,7 @@
       </div>
 
       <button type="submit" class="btn">Log In</button>
-      <a href="#" id="forgotPassword" class="forgot">Forgot Password?</a>
+      <a href="forgetPassword.html" id="forgotPassword" class="forgot">Forgot Password?</a>
     </form>
 
     <p class="signup-text">Don't have an account? <a href="register.html">Sign Up</a></p>
