--- a/User/register.html
+++ b/User/register.html
@@ -6,6 +6,8 @@
   <title>Sign Up | PawPromise</title>
   <link rel="stylesheet" href="/css/signUp.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
 </head>
 <body style="background-color: honeydew;">
   <div class="signup-container">
