--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body style="background-color: honeydew;">
   <section class="mx-4 md:mx-8 lg:mx-20">
     <nav class="flex items-center justify-between pt-6 md:pt-10 pb-5 relative">
       <div class="flex items-center space-x-4">
         <button><i class="fa-solid fa-paw"></i></button>
-        <button><h1 class="text-xl font-bold text-gray-800">Peddy</h1></button>
+        <button>
+          <h1 class="text-xl font-bold text-gray-800">Peddy</h1>
+        </button>
       </div>
       <div class="nav-links hidden md:flex items-center space-x-4">
         <button>Home</button>
@@ -46,19 +50,21 @@
           <span>Starts Here</span>
         </h1>
       </div>
-   
+
       <div class="btn">
         <a href="#scroller">
           <button id="viewMoreBtn">View More</button>
         </a>
       </div>
       <div class="m-4 p-4 md:p-8 lg:p-16 flex justify-center items-center">
-        <img src="/assets/Puppy-and-Kitten-Sleeping-1000x500.jpg" alt="" class="w-full max-w-4xl"/>
+        <img src="/assets/Puppy-and-Kitten-Sleeping-1000x500.jpg" alt="" class="w-full max-w-4xl" />
       </div>
       <div class="flex items-center justify-center flex-col" id="adoptSection">
         <h1 id="scroller" class="font-bold text-xl md:text-2xl">Adopt Your Best Friend</h1>
-        <h3 class="text-center px-4 sm:px-8 md:px-16 lg:px-20 max-w-4xl mx-auto py-6 md:py-8 text-sm sm:text-base md:text-lg leading-relaxed">
-          It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a.
+        <h3
+          class="text-center px-4 sm:px-8 md:px-16 lg:px-20 max-w-4xl mx-auto py-6 md:py-8 text-sm sm:text-base md:text-lg leading-relaxed">
+          It is a long established fact that a reader will be distracted by the readable content of a page when looking
+          at its layout. The point of using Lorem Ipsum is that it has a.
         </h3>
       </div>
     </section>
@@ -73,7 +79,8 @@
           <img class="w-6 h-6 sm:w-8 sm:h-8 md:w-10 md:h-10" src="/assets/cat.png" alt="">
           <span class="text-sm sm:text-base">Cats</span>
         </button>
-        <button class="pet-btnss flex flex-col sm:flex-row gap-1 sm:gap-3 items-center justify-center" data-type="rabbit">
+        <button class="pet-btnss flex flex-col sm:flex-row gap-1 sm:gap-3 items-center justify-center"
+          data-type="rabbit">
           <img class="w-6 h-6 sm:w-8 sm:h-8 md:w-10 md:h-10" src="/assets/rabbit.png" alt="">
           <span class="text-sm sm:text-base">Rabbits</span>
         </button>
@@ -87,7 +94,8 @@
     <section>
       <div class="flex flex-col sm:flex-row justify-between items-center my-6 md:my-10 px-4 md:px-8 lg:px-12 gap-4">
         <h1 class="text-black font-bold text-lg md:text-xl">Best deal for you</h1>
-        <div class="btn rounded-xl bg-[rgba(14,122,129,1)] px-6 md:px-10 text-white w-full sm:w-auto" id="sortByPriceBtn">
+        <div class="btn rounded-xl bg-[rgba(14,122,129,1)] px-6 md:px-10 text-white w-full sm:w-auto"
+          id="sortByPriceBtn">
           <button class="w-full sm:w-auto">Sort By Price</button>
         </div>
       </div>
@@ -95,7 +103,8 @@
         <div class="animate-spin rounded-full h-8 w-8 md:h-10 md:w-10 border-t-4 border-blue-500 border-solid"></div>
       </div>
       <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 px-4 md:px-8 lg:px-12">
-        <div id="pet-container" class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-5"></div>
+        <div id="pet-container" class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-5">
+        </div>
         <div class="border border-gray-300 rounded-lg p-4 lg:col-span-1">
           <h3 class="font-bold text-center mb-4 text-sm md:text-base">Liked Pets</h3>
           <div id="liked-pets" class="grid grid-cols-3 sm:grid-cols-4 lg:grid-cols-2 gap-2"></div>
@@ -106,7 +115,7 @@
 
   <footer class="bg-black text-white p-8 mt-20">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center md:text-left">
-  
+
       <!-- Peddy Info -->
       <div class="max-w-xs mx-auto text-center md:mx-0 md:text-left">
         <h2 class="text-xl font-bold">Peddy</h2>
@@ -120,7 +129,7 @@
           <i class="fab fa-instagram"></i>
         </div>
       </div>
-  
+
       <!-- Useful Links -->
       <div>
         <h2 class="text-xl font-bold mb-3">Useful Links</h2>
@@ -132,23 +141,23 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-  
+
       <!-- Drop a Message -->
       <div>
         <h2 class="text-xl font-bold mb-3">Drop a Message</h2>
         <form class="flex gap-2">
-          <input type="email" placeholder="Enter your email" 
-                 class="p-2 rounded text-black w-full">
+          <input type="email" placeholder="Enter your email" class="p-2 rounded text-black w-full">
           <button class="bg-teal-500 px-4 py-2 rounded">Subscribe</button>
         </form>
       </div>
-  
+
     </div>
   </footer>
-  
+
   <div id="pet-modal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden z-50 p-4">
     <div class="bg-white rounded-xl p-0 h-auto max-h-[90vh] w-full max-w-md mx-4 md:mx-0 overflow-y-auto relative">
-      <button id="close-modal" class="absolute top-4 right-4 text-gray-500 hover:text-black text-xl md:text-2xl z-10 bg-white rounded-full w-7 h-7 md:w-8 md:h-8 flex items-center justify-center shadow-md">&times;</button>
+      <button id="close-modal"
+        class="absolute top-4 right-4 text-gray-500 hover:text-black text-xl md:text-2xl z-10 bg-white rounded-full w-7 h-7 md:w-8 md:h-8 flex items-center justify-center shadow-md">&times;</button>
       <div class="modal-image-container mx-auto">
         <img id="modal-image" class="w-full h-full object-cover" />
       </div>
@@ -177,18 +186,22 @@
         </div>
         <div class="modal-description text-xs md:text-sm">
           <h3 class="font-bold text-sm md:text-base mb-2">Details Information</h3>
-          <p class="text-gray-600 text-xs md:text-sm mb-3">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <p class="text-gray-600 text-xs md:text-sm mb-3">It is a long established fact that a reader will be
+            distracted by the readable content of a page when looking at its layout.</p>
           <ul class="list-disc pl-5 text-gray-600 text-xs md:text-sm">
-            <li>The point of using is that it has a more-or-less normal distribution of letters, as opposed to using.</li>
+            <li>The point of using is that it has a more-or-less normal distribution of letters, as opposed to using.
+            </li>
           </ul>
         </div>
         <div class="mt-4 mb-4 flex justify-center">
-          <button id="close-modal-btn" class="bg-[rgba(14,122,129,1)] text-white px-4 md:px-6 py-2 rounded-lg hover:bg-[#0d6e74] transition text-xs md:text-sm">Close</button>
+          <button id="close-modal-btn"
+            class="bg-[rgba(14,122,129,1)] text-white px-4 md:px-6 py-2 rounded-lg hover:bg-[#0d6e74] transition text-xs md:text-sm">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-<script src="/js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
+
 </html>
