--- a/pages/petfood.html
+++ b/pages/petfood.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pet Food - PawPromise</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Chewy&display=swap" rel="stylesheet">
 
 
@@ -15,18 +16,50 @@
 
 <body style="background-color: honeydew;">
   <!-- Navbar -->
-  <nav class="flex items-center justify-between px-6 md:px-20 py-4 bg-white shadow">
+  <nav class="flex items-center justify-between px-6 md:px-20 py-4 bg-white shadow w-full">
+
     <div class="flex items-center gap-3">
       <img src="https://cdn.vectorstock.com/i/2000v/11/62/simple-dog-logo-vector-50141162.avif" alt="logo"
         class="w-10 h-10 rounded-full border-2 border-blue-200">
       <h1 class="brand-title">PawPromise</h1>
     </div>
-    <div class="hidden md:flex gap-6 font-medium">
+
+    <!-- Right links + profile -->
+    <div class="hidden md:flex items-center gap-6">
       <a href="home.html" class="hover:text-[#6ab7e2]">Home</a>
       <a href="petfood.html" class="text-[#6ab7e2]">Pet Food</a>
       <a href="#" class="hover:text-[#6ab7e2]">Contact</a>
+      <a href="#" class="hover:text-[#6ab7e2]">About</a>
+
+      <div class="relative">
+        <button id="profileButton" class="flex items-center gap-2 p-2 rounded hover:bg-gray-100">
+          <i class="fa-regular fa-user text-xl"></i>
+        </button>
+        <div id="profileMenu"
+          class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Update Password</a>
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Logout</a>
+        </div>
+      </div>
     </div>
   </nav>
+
+  <script>
+    const profileButton = document.getElementById('profileButton');
+    const profileMenu = document.getElementById('profileMenu');
+
+    profileButton.addEventListener('click', () => {
+      profileMenu.classList.toggle('hidden');
+    });
+
+    window.addEventListener('click', function (e) {
+      if (!profileButton.contains(e.target) && !profileMenu.contains(e.target)) {
+        profileMenu.classList.add('hidden');
+      }
+    });
+  </script>
 
   <!-- Heading -->
   <header class="text-center py-8">
@@ -81,7 +114,9 @@
 
     <!-- Cat Foods -->
     <div class="food-card" data-animal="cat" data-price="750">
-      <img src="https://i.chaldn.com/_mpimage/oskies-adult-cat-food-tuna-500-gm?src=https%3A%2F%2Feggyolk.chaldal.com%2Fapi%2FPicture%2FRaw%3FpictureId%3D179100&q=best&v=1&m=400" alt="Cat Food">
+      <img
+        src="https://i.chaldn.com/_mpimage/oskies-adult-cat-food-tuna-500-gm?src=https%3A%2F%2Feggyolk.chaldal.com%2Fapi%2FPicture%2FRaw%3FpictureId%3D179100&q=best&v=1&m=400"
+        alt="Cat Food">
       <h3>Tuna Delight Cat Food</h3>
       <p>Price: 750 TK</p>
       <button>Add to Cart</button>
@@ -95,7 +130,8 @@
       <button>Add to Cart</button>
     </div>
     <div class="food-card" data-animal="cat" data-price="530">
-      <img src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/Enjoy_Adult_Dog_Food_Chicken_Flavour_10_-Enjoy-f9df4-441339.png">
+      <img
+        src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/Enjoy_Adult_Dog_Food_Chicken_Flavour_10_-Enjoy-f9df4-441339.png">
       <h3>Whiskas Kitten Dry Cat Food</h3>
       <p>Price: 530 TK</p>
       <button>Add to Cart</button>
@@ -207,7 +243,7 @@
   </footer>
 
   <!-- Sorting Script -->
-   <script src="/js/petfood.js"></script>
+  <script src="/js/petfood.js"></script>
 
 </body>
 
