--- a/pages/home.html
+++ b/pages/home.html
@@ -17,50 +17,38 @@
 
   <!-- Paste the full navbar code here in every page -->
   <nav class="flex items-center justify-between px-6 md:px-20 py-4 bg-white shadow w-full">
-
     <div class="flex items-center gap-3">
       <img src="https://cdn.vectorstock.com/i/2000v/11/62/simple-dog-logo-vector-50141162.avif" alt="logo"
         class="w-10 h-10 rounded-full border-2 border-blue-200">
       <h1 class="brand-title">PawPromise</h1>
     </div>
 
-    <!-- Right links + profile -->
     <div class="hidden md:flex items-center gap-6">
-      <a href="home.html" class="text-[#6ab7e2]">Home</a>
-      <a href="petfood.html" class="hover:text-[#6ab7e2]">Pet Food</a>
+      <a href="/pages/home.html" class="text-[#6ab7e2]">Home</a>
+      <a href="/pages/petfood.html" class="hover:text-[#6ab7e2]">Pet Food</a>
       <a href="#" class="hover:text-[#6ab7e2]">Contact</a>
       <a href="#" class="hover:text-[#6ab7e2]">About</a>
 
       <div class="relative">
-        <button id="profileButton" class="flex items-center gap-2 p-2 rounded hover:bg-gray-100">
-          <i class="fa-regular fa-user text-xl"></i>
+        <button id="profileButton"
+          class="flex items-center gap-2 p-2 rounded hover:bg-gray-100 border border-gray-300 bg-white">
+          <i class="fa-regular fa-user text-xl text-gray-800"></i>
+          <span id="userName" class="ml-2 font-semibold text-gray-700"></span> <!-- Username will show here -->
         </button>
+
         <div id="profileMenu"
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Update Password</a>
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Cart</a>
-          <a href="logout.html" class="px-4 py-2 hover:bg-gray-100">Logout</a>
+          <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
+          <a href="cart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
       </div>
+
     </div>
   </nav>
 
-  <script>
-    const profileButton = document.getElementById('profileButton');
-    const profileMenu = document.getElementById('profileMenu');
-
-    profileButton.addEventListener('click', () => {
-      profileMenu.classList.toggle('hidden');
-    });
-
-    window.addEventListener('click', function (e) {
-      if (!profileButton.contains(e.target) && !profileMenu.contains(e.target)) {
-        profileMenu.classList.add('hidden');
-      }
-    });
-  </script>
-
+  <!-- <script src="/js/navbar.js"></script> -->
 
   <!-- Page content -->
   <!-- <main class="p-6">
@@ -238,6 +226,8 @@
   </div>
 
   <script src="/js/script.js"></script>
+  <script src="/js/navbar.js"></script>
+
   <!-- <script src="/js/navbar.js"></script> -->
 </body>
 
