--- a/pages/petfood.html
+++ b/pages/petfood.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pet Food - PawPromise</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Chewy&display=swap" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
 
   <!-- Custom CSS -->
@@ -17,49 +21,37 @@
 <body style="background-color: honeydew;">
   <!-- Navbar -->
   <nav class="flex items-center justify-between px-6 md:px-20 py-4 bg-white shadow w-full">
-
     <div class="flex items-center gap-3">
       <img src="https://cdn.vectorstock.com/i/2000v/11/62/simple-dog-logo-vector-50141162.avif" alt="logo"
         class="w-10 h-10 rounded-full border-2 border-blue-200">
       <h1 class="brand-title">PawPromise</h1>
     </div>
 
-    <!-- Right links + profile -->
     <div class="hidden md:flex items-center gap-6">
-      <a href="home.html" class="hover:text-[#6ab7e2]">Home</a>
-      <a href="petfood.html" class="text-[#6ab7e2]">Pet Food</a>
+      <a href="/pages/home.html" class="hover:text-[#6ab7e2]">Home</a>
+      <a href="/pages/petfood.html" class="text-[#6ab7e2]">Pet Food</a>
       <a href="#" class="hover:text-[#6ab7e2]">Contact</a>
       <a href="#" class="hover:text-[#6ab7e2]">About</a>
 
       <div class="relative">
-        <button id="profileButton" class="flex items-center gap-2 p-2 rounded hover:bg-gray-100">
-          <i class="fa-regular fa-user text-xl"></i>
+        <button id="profileButton"
+          class="flex items-center gap-2 p-2 rounded hover:bg-gray-100 border border-gray-300 bg-white">
+          <i class="fa-regular fa-user text-xl text-gray-800"></i>
+          <span id="userName" class="ml-2 font-semibold text-gray-700"></span> <!-- Username will show here -->
         </button>
+
         <div id="profileMenu"
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Update Password</a>
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Cart</a>
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Logout</a>
+          <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Password</a>
+          <a href="cart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
       </div>
+
     </div>
   </nav>
 
-  <script>
-    const profileButton = document.getElementById('profileButton');
-    const profileMenu = document.getElementById('profileMenu');
-
-    profileButton.addEventListener('click', () => {
-      profileMenu.classList.toggle('hidden');
-    });
-
-    window.addEventListener('click', function (e) {
-      if (!profileButton.contains(e.target) && !profileMenu.contains(e.target)) {
-        profileMenu.classList.add('hidden');
-      }
-    });
-  </script>
 
   <!-- Heading -->
   <header class="text-center py-8">
@@ -226,8 +218,8 @@
       <div>
         <h2 class="font-bold text-lg mb-2">Quick Links</h2>
         <ul class="space-y-1">
-          <li><a href="home.html" class="hover:text-[#6ab7e2]">Home</a></li>
-          <li><a href="petfood.html" class="hover:text-[#6ab7e2]">Pet Food</a></li>
+          <li><a href="/pages/home.html" class="hover:text-[#6ab7e2]">Home</a></li>
+          <li><a href="/pages/petfood.html" class="hover:text-[#6ab7e2]">Pet Food</a></li>
           <li><a href="#" class="hover:text-[#6ab7e2]">Contact</a></li>
         </ul>
       </div>
@@ -244,6 +236,8 @@
 
   <!-- Sorting Script -->
   <script src="/js/petfood.js"></script>
+  <script src="/js/navbar.js"></script>
+
 
 </body>
 
