PetMedicine push by Bishal

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   <style>
   body {
     font-family: 'Poppins', sans-serif;
-    background-color: #f9fafb; /* Soft background */
+    background-color: #f9fafb; 
   }
 
   .brand-title {
