--- a/pages/petMedicine.html
+++ b/pages/petMedicine.html
@@ -8,8 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Chewy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-  
-   <link rel="stylesheet" href="/css/petMedicine.css">
+
+  <link rel="stylesheet" href="/css/petMedicine.css">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
   <section id="productList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 px-6 md:px-20 py-10"></section>
 
   <!-- Modal -->
-  <div id="modal" class="modal-bg flex">
+  <div id="modal" class="modal-bg">
     <div class="modal-content">
       <h2 id="modalTitle" class="text-xl font-bold mb-2"></h2>
       <img id="modalImage" src="" class="w-full mb-4 rounded">
@@ -100,10 +100,6 @@
       &copy; 2025 PawPromise. All Rights Reserved.
     </div>
   </footer>
-
-   <script src="/js/petMedicine.js"></script>
- 
-
-  
-</body>
+<script src="/js/petMedicine.js"></script>
+  </body>
 </html>
