--- a/pages/petMedicine.html
+++ b/pages/petMedicine.html
@@ -116,7 +116,9 @@
       &copy; 2025 PawPromise. All Rights Reserved.
     </div>
   </footer>
-<script src="/js/petMedicine.js"></script>
-<script src="/js/navbar.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="/js/petMedicine.js"></script>
+  <script src="/js/navbar.js"></script>
   </body>
 </html>
