--- a/pages/petfood.html
+++ b/pages/petfood.html
@@ -86,7 +86,7 @@
     <div class="px-6 md:px-20 grid grid-cols-1 md:grid-cols-3 gap-6">
       <div>
         <h2 class="font-bold text-lg mb-2">PawPromise</h2>
-        <p>Email: petfoeed35@gmail.com</p>
+        <p>Email: petfood35@gmail.com</p>
         <p>Contact: +8801761896783</p>
       </div>
       <div>
