--- a/pages/home.html
+++ b/pages/home.html
@@ -226,7 +226,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/script.js"></script>
+  <script src="/js/home.js"></script>
   <script src="/js/navbar.js"></script>
 
   <!-- <script src="/js/navbar.js"></script> -->
