Footer updated by shahriar

--- a/pages/home.html
+++ b/pages/home.html
@@ -143,9 +143,9 @@
       <!-- Peddy Info -->
       <div class="max-w-xs mx-auto text-center md:mx-0 md:text-left">
         <h2 class="text-xl font-bold">Peddy</h2>
-        <p>123 Washington 165, NY CA 94003</p>
-        <p>Phone: +315 854 4725</p>
-        <p>Email: info@foundin.com</p>
+        <p>Dhaka,Bangladesh</p>
+        <p>Phone: +8801737712021</p>
+        <p>Email: Peddy@gmail.com</p>
         <p>Opening hours: 8AM - 1PM</p>
         <div class="flex gap-3 mt-3">
           <i class="fab fa-facebook"></i>
