cehckout page, crud operation

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,7 +131,7 @@
           <img src="../assets/Seyam.jpg" alt="Seyam" class="team-img" />
           <div class="team-info">
             <h3>Seyam Sarkar</h3>
-            <span class="designation"><i class="fa-solid fa-gears"></i>&nbsp;Web Architect & Product manager</span>
+            <span class="designation"><i class="fa-solid fa-gears"></i>&nbsp;Tester and Debager</span>
             <ul class="team-list">
               <li><i class="fa-regular fa-id-badge"></i> <strong>ID:</strong>&nbsp;221-15-5795</li>
               <li><i class="fa-regular fa-envelope"></i> sarkar15-5729@diu.edu.bd</li>
