--- a/pages/home.html
+++ b/pages/home.html
@@ -40,7 +40,7 @@
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
           <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
           <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
-          <a href="cart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
       </div>
@@ -158,11 +158,11 @@
       <div>
         <h2 class="text-xl font-bold mb-3">Useful Links</h2>
         <ul class="space-y-2">
-          <li><a href="#">Home</a></li>
+          <li><a href="/pages/home.html">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Animals</a></li>
           <li><a href="#">Foundation</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/pages/contact.html">Contact</a></li>
         </ul>
       </div>
 
@@ -228,6 +228,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/js/home.js"></script>
   <script src="/js/navbar.js"></script>
+  <script src="/js/addToCard.js"></script>
 
   <!-- <script src="/js/navbar.js"></script> -->
 </body>
