--- a/pages/petMedicine.html
+++ b/pages/petMedicine.html
@@ -122,6 +122,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/js/petMedicine.js"></script>
   <script src="/js/navbar.js"></script>
+  <script src="/js/addToCard.js"></script>
 
 </body>
 
