--- a/pages/petfood.html
+++ b/pages/petfood.html
@@ -41,7 +41,7 @@
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
           <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
           <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
-          <a href="cart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="/pages/addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
       </div>
@@ -112,6 +112,7 @@
   <!-- Sorting Script --> 
   <script src="/js/petfood.js"></script>
   <script src="/js/navbar.js"></script>
+  <script src="/js/addToCard.js"></script>
 
 
 </body>
